--- a/dot.emacs.d/emacs.org
+++ b/dot.emacs.d/emacs.org
@@ -521,3 +521,14 @@ Late deadlines first, then scheduled, then non-late deadlines"
 ; TAB shows the next level of targets etc
 (setq org-outline-path-complete-in-steps t)
 #+end_src
+* Org-moode
+** mobileapp
+#+begin_src emacs-lisp
+;; Set to the location of your Org files on your local system
+(setq org-directory "~/org")
+;; Set to the name of the file where new notes will be stored
+(setq org-mobile-inbox-for-pull "~/todo.org")
+;; Set to <your Dropbox root directory>/MobileOrg.
+(setq org-mobile-directory "~/Dropbox/MobileOrg")
+#+end_src
+   
