novas conf de emacs

--- a/dot.emacs.d/emacs.org
+++ b/dot.emacs.d/emacs.org
@@ -43,15 +43,12 @@ far:
 (require 'fuzzy-match)
 (require 'synonyms)
 (require 'icicles)
-;(require 'color-theme-solarized)
-;(require 'solarized)
 
 (require 'epa-file)
 (require 'col-highlight)
 (require 'myemacs)
 (require 'uniquify)
 (require 'yasnippet-bundle)
-(load "~/.libemacs/lib/haskell-mode/haskell-site-file")
 (epa-file-enable)
 
 (when (not (boundp 'ac-dictionary-directories)) (setq ac-dictionary-directories ()))
@@ -60,6 +57,49 @@ far:
 (ac-config-default)
 #+end_src
 
+* Modes
+** HTML mode
+#+begin_src emacs-lisp
+(add-to-list 'auto-mode-alist '("\\.css$" . html-mode))
+(add-to-list 'auto-mode-alist '("\\.erb$" . html-mode))
+(add-to-list 'auto-mode-alist '("\\.tt$" . html-mode))
+
+#+end_src
+
+#+RESULTS:
+| (\.tt$ . html-mode) | (\.erb$ . html-mode) | (\.css$ . html-mode) | (\.hrl\' . erlang-mode) | (\.erl\' . erlang-mode) | (\.markdown . markdown-mode) | (\.text . markdown-mode) | (\.t$ . cperl-mode) | (\.js$ . js2-mode) | (\.l[gh]s\' . literate-haskell-mode) | (\.\(?:[gh]s\ | hi\)\' . haskell-mode) | (\.cabal\' . haskell-cabal-mode) | (\.hsc\' . haskell-c-mode) | (\.hcr\' . ghc-core-mode) | (\.gpg\(~\ | \.~[0-9]+~\)?\' nil epa-file) | (\.dz\' nil jka-compr) | (\.xz\' nil jka-compr) | (\.lzma\' nil jka-compr) | (\.lz\' nil jka-compr) | (\.g?z\' nil jka-compr) | (\.bz2\' nil jka-compr) | (\.Z\' nil jka-compr) | (\.vr[hi]?\' . vera-mode) | (\.rb\' . ruby-mode) | (\.re?st\' . rst-mode) | (\.py\' . python-mode) | (\.awk\' . awk-mode) | (\.\(u?lpc\ | pike\ | pmod\(.in\)?\)\' . pike-mode) | (\.idl\' . idl-mode) | (\.java\' . java-mode) | (\.m\' . objc-mode) | (\.ii\' . c++-mode) | (\.i\' . c-mode) | (\.lex\' . c-mode) | (\.y\(acc\)?\' . c-mode) | (\.[ch]\' . c-mode) | (\.\(CC?\ | HH?\)\' . c++-mode) | (\.[ch]\(pp\ | xx\ | \+\+\)\' . c++-mode) | (\.\(cc\ | hh\)\' . c++-mode) | (\.[sx]?html?\(\.[a-zA-Z_]+\)?\' . html-mode) | (\.svgz?\' . image-mode) | (\.svgz?\' . xml-mode) | (\.x[bp]m\' . image-mode) | (\.x[bp]m\' . c-mode) | (\.p[bpgn]m\' . image-mode) | (\.tiff?\' . image-mode) | (\.gif\' . image-mode) | (\.png\' . image-mode) | (\.jpe?g\' . image-mode) | (\.te?xt\' . text-mode) | (\.[tT]e[xX]\' . tex-mode) | (\.ins\' . tex-mode) | (\.ltx\' . latex-mode) | (\.dtx\' . doctex-mode) | (\.org\' . org-mode) | (\.el\' . emacs-lisp-mode) | (Project\.ede\' . emacs-lisp-mode) | (\.\(scm\ | stk\ | ss\ | sch\)\' . scheme-mode) | (\.l\' . lisp-mode) | (\.li?sp\' . lisp-mode) | (\.[fF]\' . fortran-mode) | (\.for\' . fortran-mode) | (\.p\' . pascal-mode) | (\.pas\' . pascal-mode) | (\.\(dpr\ | DPR\)\' . delphi-mode) | (\.ad[abs]\' . ada-mode) | (\.ad[bs].dg\' . ada-mode) | (\.\([pP]\([Llm]\ | erl\ | od\)\ | al\)\' . perl-mode) | (Imakefile\' . makefile-imake-mode) | (Makeppfile\(?:\.mk\)?\' . makefile-makepp-mode) | (\.makepp\' . makefile-makepp-mode) | (\.mk\' . makefile-bsdmake-mode) | (GNUmakefile\' . makefile-gmake-mode) | ([Mm]akefile\' . makefile-bsdmake-mode) | (\.am\' . makefile-automake-mode) | (\.texinfo\' . texinfo-mode) | (\.te?xi\' . texinfo-mode) | (\.[sS]\' . asm-mode) | (\.asm\' . asm-mode) | (\.css\' . css-mode) | (\.mixal\' . mixal-mode) | (\.gcov\' . compilation-mode) | (/\.[a-z0-9-]*gdbinit . gdb-script-mode) | ([cC]hange\.?[lL]og?\' . change-log-mode) | ([cC]hange[lL]og[-.][0-9]+\' . change-log-mode) | (\$CHANGE_LOG\$\.TXT . change-log-mode) | (\.scm\.[0-9]*\' . scheme-mode) | (\.[ck]?sh\'\ | \.shar\'\ | /\.z?profile\' . sh-mode) | (\.bash\' . sh-mode) | (\(/\ | \`\)\.\(bash_profile\ | z?login\ | bash_login\ | z?logout\)\' . sh-mode) | (\(/\ | \`\)\.\(bash_logout\ | shrc\ | [kz]shrc\ | bashrc\ | t?cshrc\ | esrc\)\' . sh-mode) | (\(/\ | \`\)\.\([kz]shenv\ | xinitrc\ | startxrc\ | xsession\)\' . sh-mode) | (\.m?spec\' . sh-mode) | (\.m[mes]\' . nroff-mode) | (\.man\' . nroff-mode) | (\.sty\' . latex-mode) | (\.cl[so]\' . latex-mode) | (\.bbl\' . latex-mode) | (\.bib\' . bibtex-mode) | (\.bst\' . bibtex-style-mode) | (\.sql\' . sql-mode) | (\.m[4c]\' . m4-mode) | (\.mf\' . metafont-mode) | (\.mp\' . metapost-mode) | (\.vhdl?\' . vhdl-mode) | (\.article\' . text-mode) | (\.letter\' . text-mode) | (\.i?tcl\' . tcl-mode) | (\.exp\' . tcl-mode) | (\.itk\' . tcl-mode) | (\.icn\' . icon-mode) | (\.sim\' . simula-mode) | (\.mss\' . scribe-mode) | (\.f9[05]\' . f90-mode) | (\.f0[38]\' . f90-mode) | (\.indent\.pro\' . fundamental-mode) | (\.\(pro\ | PRO\)\' . idlwave-mode) | (\.srt\' . srecode-template-mode) | (\.prolog\' . prolog-mode) | (\.tar\' . tar-mode) | (\.\(arc\ | zip\ | lzh\ | lha\ | zoo\ | [jew]ar\ | xpi\ | rar\ | 7z\ | ARC\ | ZIP\ | LZH\ | LHA\ | ZOO\ | [JEW]AR\ | XPI\ | RAR\ | 7Z\)\' . archive-mode) | (\.\(sx[dmicw]\ | od[fgpst]\ | oxt\)\' . archive-mode) | (\.\(deb\ | [oi]pk\)\' . archive-mode) | (\`/tmp/Re . text-mode) | (/Message[0-9]*\' . text-mode) | (\`/tmp/fol/ . text-mode) | (\.oak\' . scheme-mode) | (\.sgml?\' . sgml-mode) | (\.x[ms]l\' . xml-mode) | (\.dbk\' . xml-mode) | (\.dtd\' . sgml-mode) | (\.ds\(ss\)?l\' . dsssl-mode) | (\.js\' . js-mode) | (\.json\' . js-mode) | (\.[ds]?vh?\' . verilog-mode) | ([]>:/\]\..*\(emacs\ | gnus\ | viper\)\' . emacs-lisp-mode) | (\`\..*emacs\' . emacs-lisp-mode) | ([:/]_emacs\' . emacs-lisp-mode) | (/crontab\.X*[0-9]+\' . shell-script-mode) | (\.ml\' . lisp-mode) | (\.ld[si]?\' . ld-script-mode) | (ld\.?script\' . ld-script-mode) | (\.xs\' . c-mode) | (\.x[abdsru]?[cnw]?\' . ld-script-mode) | (\.zone\' . dns-mode) | (\.soa\' . dns-mode) | (\.asd\' . lisp-mode) | (\.\(asn\ | mib\ | smi\)\' . snmp-mode) | (\.\(as\ | mi\ | sm\)2\' . snmpv2-mode) | (\.\(diffs?\ | patch\ | rej\)\' . diff-mode) | (\.\(dif\ | pat\)\' . diff-mode) | (\.[eE]?[pP][sS]\' . ps-mode) | (\.\(?:PDF\ | DVI\ | OD[FGPST]\ | DOCX?\ | XLSX?\ | PPTX?\ | pdf\ | dvi\ | od[fgpst]\ | docx?\ | xlsx?\ | pptx?\)\' . doc-view-mode-maybe) | (configure\.\(ac\ | in\)\' . autoconf-mode) | (\.s\(v\ | iv\ | ieve\)\' . sieve-mode) | (BROWSE\' . ebrowse-tree-mode) | (\.ebrowse\' . ebrowse-tree-mode) | (#\*mail\* . mail-mode) | (\.g\' . antlr-mode) | (\.mod\' . m2-mode) | (\.ses\' . ses-mode) | (\.docbook\' . sgml-mode) | (\.com\' . dcl-mode) | (/config\.\(?:bat\ | log\)\' . fundamental-mode) | (\.\(?:[iI][nN][iI]\ | [lL][sS][tT]\ | [rR][eE][gG]\ | [sS][yY][sS]\)\' . conf-mode) | (\.\(?:desktop\ | la\)\' . conf-unix-mode) | (\.ppd\' . conf-ppd-mode) | (java.+\.conf\' . conf-javaprop-mode) | (\.properties\(?:\.[a-zA-Z0-9._-]+\)?\' . conf-javaprop-mode) | (\`/etc/\(?:DIR_COLORS\ | ethers\ | .?fstab\ | .*hosts\ | lesskey\ | login\.?de\(?:fs\ | vperm\)\ | magic\ | mtab\ | pam\.d/.*\ | permissions\(?:\.d/.+\)?\ | protocols\ | rpc\ | services\)\' . conf-space-mode) | (\`/etc/\(?:acpid?/.+\ | aliases\(?:\.d/.+\)?\ | default/.+\ | group-?\ | hosts\..+\ | inittab\ | ksysguarddrc\ | opera6rc\ | passwd-?\ | shadow-?\ | sysconfig/.+\)\' . conf-mode) | ([cC]hange[lL]og[-.][-0-9a-z]+\' . change-log-mode) | (/\.?\(?:gnokiirc\ | kde.*rc\ | mime\.types\ | wgetrc\)\' . conf-mode) | (/\.\(?:enigma\ | gltron\ | gtk\ | hxplayer\ | net\ | neverball\ | qt/.+\ | realplayer\ | scummvm\ | sversion\ | sylpheed/.+\ | xmp\)rc\' . conf-mode) | (/\.\(?:gdbtkinit\ | grip\ | orbital/.+txt\ | rhosts\ | tuxracer/options\)\' . conf-mode) | (/\.?X\(?:default\ | resource\ | re\)s\> . conf-xdefaults-mode) | (/X11.+app-defaults/ . conf-xdefaults-mode) | (/X11.+locale/.+/Compose\' . conf-colon-mode) | (/X11.+locale/compose\.dir\' . conf-javaprop-mode) | (\.~?[0-9]+\.[0-9][-.0-9]*~?\' nil t) | (\.\(?:orig\ | in\ | [bB][aA][kK]\)\' nil t) | ([/.]c\(?:on\)?f\(?:i?g\)?\(?:\.[a-zA-Z0-9._-]+\)?\' . conf-mode-maybe) | (\.[1-9]\' . nroff-mode) | (\.tgz\' . tar-mode) | (\.tbz2?\' . tar-mode) |
+
+** Erlang mode
+#+begin_src emacs-lisp
+; erlang-mode
+(setq load-path (cons  "/usr/local/Cellar/erlang/R1/lib/erlang/lib/tools/emacs"
+                       load-path))
+(setq erlang-root-dir "/usr/local/Cellar/erlang/")
+(setq exec-path (cons "/usr/local/Cellar/erlang/R1/bin" exec-path))
+(require 'erlang-start)
+#+end_src
+
+** Ruby mode
+#+begin_src emacs-lisp
+(setq enh-ruby-program "~/.rvm/rubies/ruby-1.9.3-p194/bin/ruby") ;
+(require 'ruby-mode)
+(add-to-list 'auto-mode-alist '("\\.pp$" . ruby-mode))
+
+(autoload 'inf-ruby "inf-ruby" "Run an inferior Ruby process" t)
+(autoload 'inf-ruby-setup-keybindings "inf-ruby" "" t)
+(eval-after-load 'ruby-mode
+      '(add-hook 'ruby-mode-hook 'inf-ruby-setup-keybindings))
+
+#+end_src
+
+#+RESULTS:
+| inf-ruby-setup-keybindings | my-ruby-mode-hook | ac-ruby-mode-setup |
+
+** Haskell mode
+#+begin_src emacs-lisp
+
+(load "~/.libemacs/lib/haskell-mode/haskell-site-file")
+#+end_src
 * others things
 ** Emacs theme
 #+begin_src emacs-lisp
@@ -188,26 +228,6 @@ far:
 #+end_src
 
 #+RESULTS:
-** HTML mode
-#+begin_src emacs-lisp
-(add-to-list 'auto-mode-alist '("\\.css$" . html-mode))
-(add-to-list 'auto-mode-alist '("\\.erb$" . html-mode))
-(add-to-list 'auto-mode-alist '("\\.tt$" . html-mode))
-
-#+end_src
-
-#+RESULTS:
-| (\.tt$ . html-mode) | (\.erb$ . html-mode) | (\.css$ . html-mode) | (\.hrl\' . erlang-mode) | (\.erl\' . erlang-mode) | (\.markdown . markdown-mode) | (\.text . markdown-mode) | (\.t$ . cperl-mode) | (\.js$ . js2-mode) | (\.l[gh]s\' . literate-haskell-mode) | (\.\(?:[gh]s\ | hi\)\' . haskell-mode) | (\.cabal\' . haskell-cabal-mode) | (\.hsc\' . haskell-c-mode) | (\.hcr\' . ghc-core-mode) | (\.gpg\(~\ | \.~[0-9]+~\)?\' nil epa-file) | (\.dz\' nil jka-compr) | (\.xz\' nil jka-compr) | (\.lzma\' nil jka-compr) | (\.lz\' nil jka-compr) | (\.g?z\' nil jka-compr) | (\.bz2\' nil jka-compr) | (\.Z\' nil jka-compr) | (\.vr[hi]?\' . vera-mode) | (\.rb\' . ruby-mode) | (\.re?st\' . rst-mode) | (\.py\' . python-mode) | (\.awk\' . awk-mode) | (\.\(u?lpc\ | pike\ | pmod\(.in\)?\)\' . pike-mode) | (\.idl\' . idl-mode) | (\.java\' . java-mode) | (\.m\' . objc-mode) | (\.ii\' . c++-mode) | (\.i\' . c-mode) | (\.lex\' . c-mode) | (\.y\(acc\)?\' . c-mode) | (\.[ch]\' . c-mode) | (\.\(CC?\ | HH?\)\' . c++-mode) | (\.[ch]\(pp\ | xx\ | \+\+\)\' . c++-mode) | (\.\(cc\ | hh\)\' . c++-mode) | (\.[sx]?html?\(\.[a-zA-Z_]+\)?\' . html-mode) | (\.svgz?\' . image-mode) | (\.svgz?\' . xml-mode) | (\.x[bp]m\' . image-mode) | (\.x[bp]m\' . c-mode) | (\.p[bpgn]m\' . image-mode) | (\.tiff?\' . image-mode) | (\.gif\' . image-mode) | (\.png\' . image-mode) | (\.jpe?g\' . image-mode) | (\.te?xt\' . text-mode) | (\.[tT]e[xX]\' . tex-mode) | (\.ins\' . tex-mode) | (\.ltx\' . latex-mode) | (\.dtx\' . doctex-mode) | (\.org\' . org-mode) | (\.el\' . emacs-lisp-mode) | (Project\.ede\' . emacs-lisp-mode) | (\.\(scm\ | stk\ | ss\ | sch\)\' . scheme-mode) | (\.l\' . lisp-mode) | (\.li?sp\' . lisp-mode) | (\.[fF]\' . fortran-mode) | (\.for\' . fortran-mode) | (\.p\' . pascal-mode) | (\.pas\' . pascal-mode) | (\.\(dpr\ | DPR\)\' . delphi-mode) | (\.ad[abs]\' . ada-mode) | (\.ad[bs].dg\' . ada-mode) | (\.\([pP]\([Llm]\ | erl\ | od\)\ | al\)\' . perl-mode) | (Imakefile\' . makefile-imake-mode) | (Makeppfile\(?:\.mk\)?\' . makefile-makepp-mode) | (\.makepp\' . makefile-makepp-mode) | (\.mk\' . makefile-bsdmake-mode) | (GNUmakefile\' . makefile-gmake-mode) | ([Mm]akefile\' . makefile-bsdmake-mode) | (\.am\' . makefile-automake-mode) | (\.texinfo\' . texinfo-mode) | (\.te?xi\' . texinfo-mode) | (\.[sS]\' . asm-mode) | (\.asm\' . asm-mode) | (\.css\' . css-mode) | (\.mixal\' . mixal-mode) | (\.gcov\' . compilation-mode) | (/\.[a-z0-9-]*gdbinit . gdb-script-mode) | ([cC]hange\.?[lL]og?\' . change-log-mode) | ([cC]hange[lL]og[-.][0-9]+\' . change-log-mode) | (\$CHANGE_LOG\$\.TXT . change-log-mode) | (\.scm\.[0-9]*\' . scheme-mode) | (\.[ck]?sh\'\ | \.shar\'\ | /\.z?profile\' . sh-mode) | (\.bash\' . sh-mode) | (\(/\ | \`\)\.\(bash_profile\ | z?login\ | bash_login\ | z?logout\)\' . sh-mode) | (\(/\ | \`\)\.\(bash_logout\ | shrc\ | [kz]shrc\ | bashrc\ | t?cshrc\ | esrc\)\' . sh-mode) | (\(/\ | \`\)\.\([kz]shenv\ | xinitrc\ | startxrc\ | xsession\)\' . sh-mode) | (\.m?spec\' . sh-mode) | (\.m[mes]\' . nroff-mode) | (\.man\' . nroff-mode) | (\.sty\' . latex-mode) | (\.cl[so]\' . latex-mode) | (\.bbl\' . latex-mode) | (\.bib\' . bibtex-mode) | (\.bst\' . bibtex-style-mode) | (\.sql\' . sql-mode) | (\.m[4c]\' . m4-mode) | (\.mf\' . metafont-mode) | (\.mp\' . metapost-mode) | (\.vhdl?\' . vhdl-mode) | (\.article\' . text-mode) | (\.letter\' . text-mode) | (\.i?tcl\' . tcl-mode) | (\.exp\' . tcl-mode) | (\.itk\' . tcl-mode) | (\.icn\' . icon-mode) | (\.sim\' . simula-mode) | (\.mss\' . scribe-mode) | (\.f9[05]\' . f90-mode) | (\.f0[38]\' . f90-mode) | (\.indent\.pro\' . fundamental-mode) | (\.\(pro\ | PRO\)\' . idlwave-mode) | (\.srt\' . srecode-template-mode) | (\.prolog\' . prolog-mode) | (\.tar\' . tar-mode) | (\.\(arc\ | zip\ | lzh\ | lha\ | zoo\ | [jew]ar\ | xpi\ | rar\ | 7z\ | ARC\ | ZIP\ | LZH\ | LHA\ | ZOO\ | [JEW]AR\ | XPI\ | RAR\ | 7Z\)\' . archive-mode) | (\.\(sx[dmicw]\ | od[fgpst]\ | oxt\)\' . archive-mode) | (\.\(deb\ | [oi]pk\)\' . archive-mode) | (\`/tmp/Re . text-mode) | (/Message[0-9]*\' . text-mode) | (\`/tmp/fol/ . text-mode) | (\.oak\' . scheme-mode) | (\.sgml?\' . sgml-mode) | (\.x[ms]l\' . xml-mode) | (\.dbk\' . xml-mode) | (\.dtd\' . sgml-mode) | (\.ds\(ss\)?l\' . dsssl-mode) | (\.js\' . js-mode) | (\.json\' . js-mode) | (\.[ds]?vh?\' . verilog-mode) | ([]>:/\]\..*\(emacs\ | gnus\ | viper\)\' . emacs-lisp-mode) | (\`\..*emacs\' . emacs-lisp-mode) | ([:/]_emacs\' . emacs-lisp-mode) | (/crontab\.X*[0-9]+\' . shell-script-mode) | (\.ml\' . lisp-mode) | (\.ld[si]?\' . ld-script-mode) | (ld\.?script\' . ld-script-mode) | (\.xs\' . c-mode) | (\.x[abdsru]?[cnw]?\' . ld-script-mode) | (\.zone\' . dns-mode) | (\.soa\' . dns-mode) | (\.asd\' . lisp-mode) | (\.\(asn\ | mib\ | smi\)\' . snmp-mode) | (\.\(as\ | mi\ | sm\)2\' . snmpv2-mode) | (\.\(diffs?\ | patch\ | rej\)\' . diff-mode) | (\.\(dif\ | pat\)\' . diff-mode) | (\.[eE]?[pP][sS]\' . ps-mode) | (\.\(?:PDF\ | DVI\ | OD[FGPST]\ | DOCX?\ | XLSX?\ | PPTX?\ | pdf\ | dvi\ | od[fgpst]\ | docx?\ | xlsx?\ | pptx?\)\' . doc-view-mode-maybe) | (configure\.\(ac\ | in\)\' . autoconf-mode) | (\.s\(v\ | iv\ | ieve\)\' . sieve-mode) | (BROWSE\' . ebrowse-tree-mode) | (\.ebrowse\' . ebrowse-tree-mode) | (#\*mail\* . mail-mode) | (\.g\' . antlr-mode) | (\.mod\' . m2-mode) | (\.ses\' . ses-mode) | (\.docbook\' . sgml-mode) | (\.com\' . dcl-mode) | (/config\.\(?:bat\ | log\)\' . fundamental-mode) | (\.\(?:[iI][nN][iI]\ | [lL][sS][tT]\ | [rR][eE][gG]\ | [sS][yY][sS]\)\' . conf-mode) | (\.\(?:desktop\ | la\)\' . conf-unix-mode) | (\.ppd\' . conf-ppd-mode) | (java.+\.conf\' . conf-javaprop-mode) | (\.properties\(?:\.[a-zA-Z0-9._-]+\)?\' . conf-javaprop-mode) | (\`/etc/\(?:DIR_COLORS\ | ethers\ | .?fstab\ | .*hosts\ | lesskey\ | login\.?de\(?:fs\ | vperm\)\ | magic\ | mtab\ | pam\.d/.*\ | permissions\(?:\.d/.+\)?\ | protocols\ | rpc\ | services\)\' . conf-space-mode) | (\`/etc/\(?:acpid?/.+\ | aliases\(?:\.d/.+\)?\ | default/.+\ | group-?\ | hosts\..+\ | inittab\ | ksysguarddrc\ | opera6rc\ | passwd-?\ | shadow-?\ | sysconfig/.+\)\' . conf-mode) | ([cC]hange[lL]og[-.][-0-9a-z]+\' . change-log-mode) | (/\.?\(?:gnokiirc\ | kde.*rc\ | mime\.types\ | wgetrc\)\' . conf-mode) | (/\.\(?:enigma\ | gltron\ | gtk\ | hxplayer\ | net\ | neverball\ | qt/.+\ | realplayer\ | scummvm\ | sversion\ | sylpheed/.+\ | xmp\)rc\' . conf-mode) | (/\.\(?:gdbtkinit\ | grip\ | orbital/.+txt\ | rhosts\ | tuxracer/options\)\' . conf-mode) | (/\.?X\(?:default\ | resource\ | re\)s\> . conf-xdefaults-mode) | (/X11.+app-defaults/ . conf-xdefaults-mode) | (/X11.+locale/.+/Compose\' . conf-colon-mode) | (/X11.+locale/compose\.dir\' . conf-javaprop-mode) | (\.~?[0-9]+\.[0-9][-.0-9]*~?\' nil t) | (\.\(?:orig\ | in\ | [bB][aA][kK]\)\' nil t) | ([/.]c\(?:on\)?f\(?:i?g\)?\(?:\.[a-zA-Z0-9._-]+\)?\' . conf-mode-maybe) | (\.[1-9]\' . nroff-mode) | (\.tgz\' . tar-mode) | (\.tbz2?\' . tar-mode) |
-
-** Erlang mode
-#+begin_src emacs-lisp
-; erlang-mode
-(setq load-path (cons  "/usr/local/Cellar/erlang/R1/lib/erlang/lib/tools/emacs"
-                       load-path))
-(setq erlang-root-dir "/usr/local/Cellar/erlang/")
-(setq exec-path (cons "/usr/local/Cellar/erlang/R1/bin" exec-path))
-(require 'erlang-start)
-#+end_src
 ** UTF-8 conf
    ;;;;;;;;;;;;;;;;;;;;
    ;; set up unicode
@@ -221,12 +241,6 @@ far:
    (setq x-select-request-type '(UTF8_STRING COMPOUND_TEXT TEXT STRING))
    ;; MS Windows clipboard is UTF-16LE
 (set-clipboard-coding-system 'utf-16le-dos)
-** Ruby mode
-#+begin_src emacs-lisp
-(setq enh-ruby-program "~/.rvm/rubies/ruby-1.9.3-p125/bin/ruby") ;
-(require 'ruby-mode)
-(add-to-list 'auto-mode-alist '("\\.pp$" . ruby-mode))
-#+end_src
 ** Emacs server
 #+begin_src emacs-lisp
 (if (file-exists-p
@@ -251,13 +265,25 @@ nil (server-start))
 
 (symbol-value icicle-mode)
 
+(add-to-list 'load-path "/Users/lrodrigues/.libemacs/lib/helm")
+(require 'helm-config)
+(require 'helm-files)
+(setq helm-idle-delay 0.1)
+(setq helm-input-idle-delay 0.1)
+(setq helm-c-locate-command "locate-with-mdfind %.0s %s")
+(loop for ext in '("\\.swf$" "\\.elc$" "\\.pyc$")
+      do (add-to-list 'helm-c-boring-file-regexp-list ext))
+(define-key global-map [(alt t)] 'helm-for-files)
+
+
 #+end_src
 
 #+RESULTS:
-| my-icicle-mode-hook |
+: ac-complete-words-in-ruby-buffers
 
 ** Org/GTD config
 #+being_src emacs-lisp
+
 ;; isso aí vai ativar uma série de comandos de uma tecla só
 ;; quando o cursor estiver em cima das "**"
 (setq org-use-speed-commands t)
@@ -599,13 +625,25 @@ Late deadlines first, then scheduled, then non-late deadlines"
 ; TAB shows the next level of targets etc
 (setq org-outline-path-complete-in-steps t)
 #+end_src
-* Org-moode
-** mobileapp
-#+begin_src emacs-lisp
-;; Set to the location of your Org files on your local system
-(setq org-directory "~/org")
-;; Set to the name of the file where new notes will be stored
-(setq org-mobile-inbox-for-pull "~/todo.org")
-;; Set to <your Dropbox root directory>/MobileOrg.
-(setq org-mobile-directory "~/Dropbox/MobileOrg")
+** R - Org
+#+being_src emacs-lisp
+
+; R stuff
+; (require 'org-babel-R)
+(require 'ob-R)
+
+# (org-babel-do-load-languages
+#    'org-babel-load-languages
+# '((R . t)))
+
+# (org-babel-do-load-languages ‘org-babel-load-languages ‘((R . t) (latex . t)))
+
+# (custom-set-variables
+#  '(org-babel-load-languages (quote ((emacs-lisp . t) (R . t))))
+#  '(org-confirm-babel-evaluate nil))
+
+(add-to-list 'load-path "/usr/local/share/emacs/site-lisp/ess/")
+(require 'ess-site)
+
+
 #+end_src
